--- a/index.html
+++ b/index.html
@@ -16,7 +16,40 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
+      <div class="weather-app">
+        <h1>New York</h1>
+        <h2>
+          <ul>
+            <li>Friday 05:00</li>
+            <li>Clear</li>
+          </ul>
+        </h2>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="Clear"
+            />
+            12°C | °F
+          </div>
+          <div class="col-md-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 72%</li>
+              <li>Wind: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/alef-coding/Vanilla-Weather-App"
+          target="_blank"
+        >
+          Open source code
+        </a>
+        by Alessandra Fontevivo
+      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
