--- a/index.html
+++ b/index.html
@@ -16,28 +16,40 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>New York</h1>
-        <h2>
-          <ul>
-            <li>Friday 05:00</li>
-            <li>Clear</li>
-          </ul>
-        </h2>
-        <div class="row">
-          <div class="col-md-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              alt="Clear"
-            />
-            12°C | °F
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>New York</h1>
+            <h2>
+              <ul>
+                <li>Friday 05:00</li>
+                <li>Clear</li>
+              </ul>
+            </h2>
           </div>
-          <div class="col-md-6">
-            <ul>
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 72%</li>
-              <li>Wind: 2 km/h</li>
-            </ul>
+
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  alt="Clear"
+                  class="float-left"
+                />
+                <span class="float-left>">
+                  <strong> 12 </strong
+                  ><span class="units">°C | <a href="#">°F</a></span>
+                </span>
+              </div>
+            </div>
+
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 72%</li>
+                <li>Wind: 2 km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
@@ -45,7 +57,7 @@
             href="https://github.com/alef-coding/Vanilla-Weather-App"
             target="_blank"
           >
-            Open source code
+            Open-source code
           </a>
           by Alessandra Fontevivo
         </small>
