--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="Clear"
-                  class="float-left"
-                />
+                <img id="icon" src="" alt="Clear" class="float-left" />
                 <span class="float-left>">
                   <strong id="temperature"></strong
                   ><span class="units">°C | <a href="#">°F</a></span>
