--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                 <img id="icon" src="" alt="Clear" class="float-left" />
                 <span class="float-left>">
                   <strong id="temperature"></strong
-                  ><span class="units">°C | <a href="#">°F</a></span>
+                  ><span class="units"
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
                 </span>
               </div>
             </div>
