Removed icon description in html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img id="icon" src="" alt="Clear" class="float-left" />
+                <img id="icon" src="" alt="" class="float-left" />
                 <span class="float-left>">
                   <strong id="temperature"></strong
                   ><span class="units"
