Styled colors and fonts

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Vanilla Weather App</title>
@@ -51,7 +56,7 @@
 
           <div class="row">
             <div class="col-6">
-              <div class="clearfix weather-temperature">
+              <div class="d-flex weather-temperature">
                 <img id="icon" src="" alt="" class="float-left" />
                 <span class="float-left>">
                   <strong id="temperature"></strong
@@ -78,7 +83,7 @@
           >
             Open-source code
           </a>
-          by Alessandra Fontevivo
+          by A. Fontevivo
         </small>
       </div>
     </div>
