--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 <span class="float-left>">
                   <strong id="temperature"></strong
                   ><span class="units"
-                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    ><a href="#" id="celsius-link" class="active">°C</a> <!--|
                     <a href="#" id="fahrenheit-link">°F</a></span
-                  >
+                  >-->
                 </span>
               </div>
             </div>
